--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,20 +35,28 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.24.0
-  firebase_auth: ^4.15.2
-  cloud_firestore: ^4.13.3
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_bloc: ^8.1.1
+  dartz: ^0.10.1
+  equatable: ^2.0.5
+  firebase_auth: ^4.2.0
+  get_it:
+  internet_connection_checker: ^1.0.0+1
+  shared_preferences: ^2.0.15
+  go_router: ^13.0.1
+  validators:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
